--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,3 @@
 [user]
-	name = davidtheghost
-	email = 74461728+davidtheghost@users.noreply.github.com
+	name = itheghost
+	email = 74461728+itheghost@users.noreply.github.com
